--- a/Login/index.html
+++ b/Login/index.html
@@ -16,7 +16,7 @@
                 <img src="logo-unifood.png" class="logo-unifood" alt="unifood-logo">
                 <div class="textfield">
                     <label for="usuario">Usuário</label>
-                    <input type="text" name="usuario" placeholder="Usuário">
+                    <input type="text" name="email" placeholder="Usuário">
                 </div>
                 <div class="textfield">
                     <label for="usuario">Senha</label>
